<resources>
    <string name="app_name">Meetup</string>
    <string name="new_user_sign_up_here">New User? Sign Up here</string>
    <string name="login">LOG IN</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="name_text">Name</string>
    <string name="already_an_user_log_in_here">Already an User? Log in here</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_text_1">All</string>
    <string name="tab_text_2">Going</string>
    <string name="tab_text_3">Past</string>
    <string name="title_activity_explore_maps">Map</string>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>

